Added remaining journals

--- a/publications.html
+++ b/publications.html
@@ -108,20 +108,72 @@
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                         <div class="card-body">
-                
+
                             <div class="row mb-3">
                                 <div class="col-2 col-md-1 border-dark border-right justify-content-end">
-                                    <p class="font-weight-bold d-flex justify-content-end">Under Review</p>
+                                    <p class="font-weight-bold d-flex justify-content-end">In the Pipeline</p>
                                 </div>
                                 <div class="col-10 col-md-11">
                                     <ol>
                                         <li>
                                             <p class="text-muted">
-                                                Pal, M., S. Bandyopadhyay and S. Bhattacharyya. <em>An evolutionary
+                                                S. Bhattacharyya, D. Valeriani, 
+                                                C. Cinel, L. Citi and R. Poli. <em>Anytime Collaborative 
+                                                    Brain-Computer Interfaces  for Enhancing Group Decision-Making 
+                                                    in Realistic Environments</em>.
+                                            </p>
+                                        </li>
+                                    </ol>
+                                </div>
+                            </div>
+                            
+                            <div class="row mb-3">
+                                <div class="col-2 col-md-1 border-dark border-right justify-content-end">
+                                    <p class="font-weight-bold d-flex justify-content-end">In the Pipeline</p>
+                                </div>
+                                <div class="col-10 col-md-11">
+                                    <ol>
+                                        <li>
+                                            <p class="text-muted">
+                                                J. Fernandez-Vargas, C. Tremmel, D. Valeriani, S. Bhattacharyya, 
+                                                C. Cinel, L. Citi and R. Poli. <em>Subject- and task-independent 
+                                                    neural correlates and prediction of decision confidence</em>.
+                                            </p>
+                                        </li>
+                                    </ol>
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <div class="col-2 col-md-1 border-dark border-right justify-content-end">
+                                    <p class="font-weight-bold d-flex justify-content-end">In the Pipeline</p>
+                                </div>
+                                <div class="col-10 col-md-11">
+                                    <ol>
+                                        <li>
+                                            <p class="text-muted">
+                                                M. Pal, S. Bandyopadhyay and S. Bhattacharyya. <em>An evolutionary
                                                     framework for the interdependent
-                                                    sub-problems in motor imagery EEG transference</em>, Under review in
-                                                IEEE Transaction on Emerging Topics
-                                                in Computational Intelligence.
+                                                    sub-problems in motor imagery EEG transference</em>.
+                                            </p>
+                                        </li>
+                                    </ol>
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <div class="col-2 col-md-1 border-dark border-right justify-content-end">
+                                    <p class="font-weight-bold d-flex justify-content-end">In the Pipeline</p>
+                                </div>
+                                <div class="col-10 col-md-11">
+                                    <ol>
+                                        <li>
+                                            <p class="text-muted">
+                                                S. Bhattacharyya and M. Hayashibe. <em>An Optimal Transport based 
+                                                    Transferable System for Detection of Erroneous Somato-sensory 
+                                                    Feedback from Neural Signals</em>, IEEE
+                                                    Transaction on Systems, Man, and Cybernetics: Systems, <em>Under 
+                                                        Review</em>
                                             </p>
                                         </li>
                                     </ol>
@@ -137,10 +189,61 @@
                                         <li>
                                             <p class="text-muted">
                                                 S. Bhattacharyya, M. Clerc and M. Hayashibe. <em>Augmenting Motor
-                                                    Imagery Learning for BrainComputer
+                                                    Imagery Learning for Brain Computer
                                                     Interfacing using Electrical Stimulation as Feedback</em>, IEEE
-                                                Transaction on Medical Robotics
+                                                Transactions on Medical Robotics
                                                 and Bionics, 1(4) : 247-255.
+                                            </p>
+                                        </li>
+                                    </ol>
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <div class="col-2 col-md-1 border-dark border-right justify-content-end">
+                                    <p class="font-weight-bold d-flex justify-content-end">2019</p>
+                                </div>
+                                <div class="col-10 col-md-11">
+                                    <ol>
+                                        <li>
+                                            <p class="text-muted">
+                                                S. Bhattacharyya, and M. Hayashibe. <em>Systematic Enhancement of 
+                                                    Functional Connectivity in Brain-Computer Interfacing using Common 
+                                                    Spatial Patterns and Tangent Space Mapping</em>, arXiv:1907.08977v1.
+                                            </p>
+                                        </li>
+                                    </ol>
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <div class="col-2 col-md-1 border-dark border-right justify-content-end">
+                                    <p class="font-weight-bold d-flex justify-content-end">2019</p>
+                                </div>
+                                <div class="col-10 col-md-11">
+                                    <ol>
+                                        <li>
+                                            <p class="text-muted">
+                                                M. Pal, S. Bandyopadhyay and S. Bhattacharyya. <em>A Many Objective 
+                                                    Optimization Approach for Transfer Learning in EEG 
+                                                    Classification </em>, arXiv:1904.04156v1.
+                                            </p>
+                                        </li>
+                                    </ol>
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <div class="col-2 col-md-1 border-dark border-right justify-content-end">
+                                    <p class="font-weight-bold d-flex justify-content-end">2019</p>
+                                </div>
+                                <div class="col-10 col-md-11">
+                                    <ol>
+                                        <li>
+                                            <p class="text-muted">
+                                                K. Pal, K. Mitra, A. Bit, S. Bhattacharyya and A. Dey. <em>Editorial. 
+                                                    Medical Signal Processing in Biomedical and Clinical 
+                                                    Applications </em>, Journal of Healthcare Engineering, Article ID 3932471.
                                             </p>
                                         </li>
                                     </ol>
